--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ copyrights: All Copyrights Reserved For ScoopThemes Inc.
 
 baseurl: "" # the subpath of your site, e.g. /blog/
 
-url: "http://localhost:4000" # the base hostname & protocol for your site
+url: "scoopthemes.github.io" # the base hostname & protocol for your site
 
 twitter_username: ScoopThemes
 github_username:  ScoopThemes
