--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ author_url: http://www.twitter.com/mshaaban0
 
 permalink: /templates/:year/:month/:day/:title/
 
-email: info@scoopthemes.com
+email: support@scoopthemes.com
 
 description: > # this means to ignore newlines until "baseurl:"
   Free Bootstrap 3 Templates & Themes high crafted like never before in the open source community, 
   All our templates and themes are open source under the MIT license, free to use. Enjoy!
 
-site_solgan: Free as It Should Be
+site_solgan: Free Bootstrap Templates and Themes
 
 copyrights: All Copyrights Reserved For ScoopThemes Inc.
 
