--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ permalink: /templates/:title/
 email: support@scoopthemes.com
 
 description: > # this means to ignore newlines until "baseurl:"
-  Free Bootstrap 3 Templates & Themes high crafted like never before in the open source community, 
+  Free Premium Bootstrap 3 Templates & Themes high crafted like never before in the open source community, 
   All our templates and themes are open source under the MIT license, free to use. Enjoy!
 
-site_solgan: Free Bootstrap Templates and Themes
+site_solgan: Free Premium Bootstrap Templates and Themes
 
 copyrights: All Copyrights Reserved For ScoopThemes Inc.
 
