--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ permalink: /templates/:title/
 email: support@scoopthemes.com
 
 description: > # this means to ignore newlines until "baseurl:"
-  Free Premium Bootstrap 3 Templates & Themes high crafted like never before in the open source community, 
-  All our templates and themes are open source under the MIT license, free to use. Enjoy!
+  Free Premium Bootstrap Templates . Themes . Components . UI Kits. Carefully Crafted Like No Other.
 
 site_solgan: Free Premium Bootstrap Templates and Themes
 
