fix: update author twitter username

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Scoop Themes
 
 author: Moe Shaaban
-author_url: http://www.twitter.com/mshaaban0
+author_url: http://www.twitter.com/1moex
 
 permalink: /templates/:title/
 
